storage service: - update golang version - query examples - exceptions - specs
