# apispec/meme-storage/server/api.gen.go
@@ -1,6 +1,6 @@
 // Package server provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.2.0 DO NOT EDIT.
 package server
 
 import (
@@ -22,6 +22,11 @@ const (
 	New            DuplicateStatus = "new"
 )
 
+// CreateImageRequestDto defines model for CreateImageRequestDto.
+type CreateImageRequestDto struct {
+	ImageBase64 string `json:"ImageBase64"`
+}
+
 // CreateMemeResponseDto defines model for CreateMemeResponseDto.
 type CreateMemeResponseDto struct {
 	DuplicateStatus *DuplicateStatus    `json:"DuplicateStatus,omitempty"`
@@ -33,33 +38,21 @@ type CreateMemeResponseDto struct {
 // DuplicateStatus defines model for DuplicateStatus.
 type DuplicateStatus string
 
-// ImageDto defines model for ImageDto.
-type ImageDto struct {
-	ImageBase64 *string `json:"ImageBase64,omitempty"`
-	MimeType    *string `json:"MimeType,omitempty"`
-}
-
 // ImageUrlDto defines model for ImageUrlDto.
 type ImageUrlDto struct {
-	Url *string `json:"Url,omitempty"`
+	Height *int   `json:"Height,omitempty"`
+	Url    string `json:"Url"`
+	Width  *int   `json:"Width,omitempty"`
 }
 
-// SearchMemeDto defines model for SearchMemeDto.
-type SearchMemeDto struct {
-	Hash               *string             `json:"Hash,omitempty"`
-	Id                 *openapi_types.UUID `json:"Id,omitempty"`
-	ImageUrl           *string             `json:"ImageUrl,omitempty"`
-	OcrResult          *string             `json:"OcrResult,omitempty"`
-	OcrResultHighlight *[]string           `json:"OcrResultHighlight,omitempty"`
-	SortId             *int64              `json:"SortId,omitempty"`
-	Thumbnail          *SearchMemeThumb    `json:"Thumbnail,omitempty"`
-}
-
-// SearchMemeThumb defines model for SearchMemeThumb.
-type SearchMemeThumb struct {
-	ThumbHeight *int    `json:"ThumbHeight,omitempty"`
-	ThumbUrl    *string `json:"ThumbUrl,omitempty"`
-	ThumbWidth  *int    `json:"ThumbWidth,omitempty"`
+// SearchMemeResponseItemDto defines model for SearchMemeResponseItemDto.
+type SearchMemeResponseItemDto struct {
+	Hash      *string             `json:"Hash,omitempty"`
+	Id        *openapi_types.UUID `json:"Id,omitempty"`
+	Image     *ImageUrlDto        `json:"Image,omitempty"`
+	OcrResult *string             `json:"OcrResult,omitempty"`
+	SortId    *int64              `json:"SortId,omitempty"`
+	Thumbnail *ImageUrlDto        `json:"Thumbnail,omitempty"`
 }
 
 // AccountId defines model for AccountId.
@@ -68,24 +61,24 @@ type AccountId = openapi_types.UUID
 // MemeId defines model for MemeId.
 type MemeId = openapi_types.UUID
 
-// MemeQuery defines model for MemeQuery.
-type MemeQuery = string
-
 // PageSize defines model for PageSize.
 type PageSize = int
+
+// Query defines model for Query.
+type Query = string
 
 // SearchAfterId defines model for SearchAfterId.
 type SearchAfterId = int64
 
 // SearchMemeParams defines parameters for SearchMeme.
 type SearchMemeParams struct {
-	MemeQuery         MemeQuery      `form:"MemeQuery" json:"MemeQuery"`
+	Query             Query          `form:"Query" json:"Query"`
 	SearchAfterSortId *SearchAfterId `form:"SearchAfterSortId,omitempty" json:"SearchAfterSortId,omitempty"`
 	PageSize          *PageSize      `form:"PageSize,omitempty" json:"PageSize,omitempty"`
 }
 
 // CreateMemeJSONRequestBody defines body for CreateMeme for application/json ContentType.
-type CreateMemeJSONRequestBody = ImageDto
+type CreateMemeJSONRequestBody = CreateImageRequestDto
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
@@ -99,7 +92,7 @@ type ServerInterface interface {
 	// (POST /api/v1/accounts/{AccountId}/meme)
 	CreateMeme(ctx echo.Context, accountId AccountId) error
 
-	// (GET /api/v1/accounts/{AccountId}/meme/{MemeId})
+	// (DELETE /api/v1/accounts/{AccountId}/meme/{MemeId})
 	DeleteMeme(ctx echo.Context, accountId AccountId, memeId MemeId) error
 
 	// (GET /api/v1/accounts/{AccountId}/meme/{MemeId}/image/thumb/url)
@@ -149,11 +142,11 @@ func (w *ServerInterfaceWrapper) SearchMeme(ctx echo.Context) error {
 
 	// Parameter object where we will unmarshal all parameters from the context
 	var params SearchMemeParams
-	// ------------- Required query parameter "MemeQuery" -------------
+	// ------------- Required query parameter "Query" -------------
 
-	err = runtime.BindQueryParameter("form", true, true, "MemeQuery", ctx.QueryParams(), &params.MemeQuery)
+	err = runtime.BindQueryParameter("form", true, true, "Query", ctx.QueryParams(), &params.Query)
 	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter MemeQuery: %s", err))
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter Query: %s", err))
 	}
 
 	// ------------- Optional query parameter "SearchAfterSortId" -------------
@@ -334,7 +327,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/api/v1/accounts/:AccountId/check-duplicates", wrapper.CheckDuplicates)
 	router.GET(baseURL+"/api/v1/accounts/:AccountId/meme", wrapper.SearchMeme)
 	router.POST(baseURL+"/api/v1/accounts/:AccountId/meme", wrapper.CreateMeme)
-	router.GET(baseURL+"/api/v1/accounts/:AccountId/meme/:MemeId", wrapper.DeleteMeme)
+	router.DELETE(baseURL+"/api/v1/accounts/:AccountId/meme/:MemeId", wrapper.DeleteMeme)
 	router.GET(baseURL+"/api/v1/accounts/:AccountId/meme/:MemeId/image/thumb/url", wrapper.GetMemeImageThumbUrl)
 	router.GET(baseURL+"/api/v1/accounts/:AccountId/meme/:MemeId/image/url", wrapper.GetMemeImageUrl)
 	router.POST(baseURL+"/api/v1/accounts/:AccountId/update-ocr", wrapper.UpdateOcr)
@@ -367,7 +360,7 @@ type SearchMemeResponseObject interface {
 	VisitSearchMemeResponse(w http.ResponseWriter) error
 }
 
-type SearchMeme200JSONResponse []SearchMemeDto
+type SearchMeme200JSONResponse []SearchMemeResponseItemDto
 
 func (response SearchMeme200JSONResponse) VisitSearchMemeResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
@@ -492,7 +485,7 @@ type StrictServerInterface interface {
 	// (POST /api/v1/accounts/{AccountId}/meme)
 	CreateMeme(ctx context.Context, request CreateMemeRequestObject) (CreateMemeResponseObject, error)
 
-	// (GET /api/v1/accounts/{AccountId}/meme/{MemeId})
+	// (DELETE /api/v1/accounts/{AccountId}/meme/{MemeId})
 	DeleteMeme(ctx context.Context, request DeleteMemeRequestObject) (DeleteMemeResponseObject, error)
 
 	// (GET /api/v1/accounts/{AccountId}/meme/{MemeId}/image/thumb/url)
